<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active_streak">Active Streak</string>
    <string name="activity_offline_description">Connect to the internet to see your activity</string>
    <string name="ad_free_learning">Ad-free learning</string>
    <string name="admob_ads_application_id">ca-app-pub-8314879823382687~5449706724</string>
    <string name="ads_keep_mimo_free">Ads help keep Mimo free</string>
    <string name="ai_tutor_chat_header">Mimo AI Tutor</string>
    <string name="ai_tutor_error_message_template">Can you explain the error %s?</string>
    <string name="ai_tutor_first_hint">Give me a hint</string>
    <string name="ai_tutor_input_max_characters">You’ve reached the limit of %d characters.</string>
    <string name="ai_tutor_input_placeholder">Ask me about coding...</string>
    <string name="ai_tutor_intro_benefit_1">Get code explanations</string>
    <string name="ai_tutor_intro_benefit_2">Receive different code examples</string>
    <string name="ai_tutor_intro_benefit_3">Debug your code</string>
    <string name="ai_tutor_intro_benefit_4">Exclusive with Mimo Pro</string>
    <string name="ai_tutor_intro_cta_free">claim free questions</string>
    <string name="ai_tutor_intro_cta_pro">Got it</string>
    <string name="ai_tutor_intro_disclaimer">Ask only coding-related questions. Never share personal data. We record and analyze conversations in order to improve Mimo.</string>
    <string name="ai_tutor_intro_freemium_description">This is a Mimo Pro feature. Enjoy a sneak peek with 5 free questions on the house!</string>
    <string name="ai_tutor_intro_title">Introducing Your Personal AI Tutor</string>
    <string name="ai_tutor_offline_description">"It seems there's a glitch in the matrix. Give it another go or check back later."</string>
    <string name="ai_tutor_second_hint">Give me another hint</string>
    <string name="ai_tutor_start_message">Hi there! How can I help?</string>
    <string name="ai_tutor_upgrade_button">Upgrade for more</string>
    <string name="ai_tutor_upgrade_message_count" formatted="false">%d/%d free questions.</string>
    <string name="ai_tutor_upgrade_title">"You've used all your free questions."</string>
    <string name="alert_msg_lar_skill_locked_generic">Locked. Finish the previous skill.</string>
    <string name="alert_msg_project_locked_specified_skill">Finish level 1 of \"%s\" to unlock this project</string>
    <string name="alert_msg_section_project_locked_specified_skill">Finish \"%s\" to unlock this project</string>
    <string name="alert_msg_section_setion_locked">Unlock this section by finishing the previous one</string>
    <string name="alert_msg_section_skill_locked_specified_skill">Finish \"%s\" to unlock this skill</string>
    <string name="all_courses_up_to_date">All courses are kept up-to-date by our in-house curriculum team</string>
    <string name="all_projects">All projects</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_icon_batmimo_name">Batmimo</string>
    <string name="app_icon_chemist_name">Chemist</string>
    <string name="app_icon_default_name">Default</string>
    <string name="app_icon_ninja_name">Ninja</string>
    <string name="app_icon_proud_name">Proud</string>
    <string name="app_icon_ukraine_name">Ukraine</string>
    <string name="app_icons">App Icons</string>
    <string name="app_name">Mimo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_now">Apply now</string>
    <string name="authentication_error_email_login_invalid_credentials">Incorrect email or password. Please try again or contact us if the problem persists.</string>
    <string name="authentication_error_login_generic">Login failed, please try again or contact us if the problem persists.</string>
    <string name="authentication_error_signup_email_already_in_use">The email address is already in use by another account</string>
    <string name="authentication_error_signup_generic">Signup failed, please try again or contact us if the problem persists.</string>
    <string name="authentication_error_social_different_provider">It looks like you’ve signed up with a different identity provider. Sign in using a provider associated with this email address.</string>
    <string name="authentication_error_username_is_needed">Please enter your username</string>
    <string name="auto_saved_code">Your changes have been saved</string>
    <string name="awesome_mode_lesson_fetch_error">"Can't fetch lesson content!"</string>
    <string name="back">Back</string>
    <string name="back_to_path">Back to path</string>
    <string name="benefits">Benefits</string>
    <string name="best_streak_label">Best Streak</string>
    <string name="best_value">Best value</string>
    <string name="beta">Beta</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_anytime_in_the_app_store">Cancel anytime in the App Store</string>
    <string name="certificate">Certificate</string>
    <string name="certificate_snackbar_download_message">Certificate download started.</string>
    <string name="certificate_upselling_boost_your_learning">Boost your learning with Pro</string>
    <string name="certificate_upselling_closer_to_certificate">"You're %d%% closer to your certificate!"</string>
    <string name="certificate_upselling_download_all">Download all earned certificates</string>
    <string name="certificate_upselling_get_personal_certificate">Keep going to reach 100% and get your personal certificate</string>
    <string name="certificate_upselling_get_your_certificate_now">"You've reached %d%%. Get your certificate now."</string>
    <string name="certificate_upselling_likely_to_finish">Pro-users are 4x likely to finish</string>
    <string name="certificate_upselling_making_progress">You’re making progress!</string>
    <string name="certificates_download">Download</string>
    <string name="certificates_finished_track_content">You are just one click away from getting your certificate.</string>
    <string name="full_hearts">Full hearts</string>
    <string name="get_unlimited_hearts">Get unlimited hearts</string>
    <string name="hearts_keep_on_learning">Keep on learning</string>
    <string name="login_benefits_compete_description">Make it to the top of your leaderboard</string>
    <string name="login_benefits_compete_title">Compete with others</string>
    <string name="login_benefits_friends_description">Learn together and motivate each other</string>
    <string name="login_benefits_friends_title">Connect with friends</string>
    <string name="login_benefits_headline">Sign up to get the most out of Mimo</string>
    <string name="login_benefits_progress_description">Start a streak and form a habit</string>
    <string name="login_benefits_progress_title">Track your progress</string>
    <string name="login_delete_account">You can delete your account in your settings</string>
    <string name="onboarding_set_motive_career">For my current job</string>
    <string name="onboarding_set_motive_developer">To become a professional developer</string>
    <string name="onboarding_set_motive_fun">Just for fun</string>
    <string name="onboarding_set_motive_project">For a different reason</string>
    <string name="onboarding_set_motive_title">Why are you learning to code?</string>
    <string name="onboarding_set_occupation_high_school_student">High school student</string>
    <string name="onboarding_set_occupation_none">None of these</string>
    <string name="onboarding_set_occupation_professional">Employee</string>
    <string name="onboarding_set_occupation_title">Which of these describes you best?</string>
    <string name="onboarding_set_occupation_university_student">University student</string>
    <string name="quit_lesson">Quit &amp; go to practice</string>
    <string name="sign_in_with_email">Sign up with email</string>
    <string name="sign_in_with_google_benefits">Sign up with Google</string>
    <string name="skip">Skip</string>
    <string name="survey_prompt_description">"Help us improve your learning 
experience by filling out this survey"</string>
    <string name="survey_prompt_no_thanks">No thanks</string>
    <string name="survey_prompt_open">Open survey</string>
    <string name="survey_prompt_title">Tell us what you think</string>
    <string name="view_components_button_secondary">Secondary</string>
    <string name="view_components_buttons">Buttons</string>
    <string name="view_components_lesson_chapter_toolbar">Chapter toolbar</string>
    <string name="view_components_lesson_interaction_keyboard_with_feedback">Interaction keyboard with feedback</string>
    <string name="view_components_lesson_run_button_states">Run button states</string>
    <string name="view_components_lesson_run_speed">Lesson run speed</string>
</resources>