<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background_primary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.getmimo.ui.components.common.MimoMaterialButton android:id="@id/btn_skip" android:paddingTop="@dimen/spacing_m_expandable" android:paddingBottom="@dimen/spacing_m_expandable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip" android:paddingStart="@dimen/spacing_m_expandable" android:paddingEnd="@dimen/spacing_m_expandable" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/MaterialButton.TextButton" />
    <TextView android:gravity="center" android:id="@id/tv_headline_authentication" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_benefits_headline" android:layout_marginHorizontal="@dimen/spacing_m_expandable" app:layout_constraintBottom_toTopOf="@id/login_benefits_container" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_skip" app:layout_constraintVertical_chainStyle="packed" app:layout_constraintWidth_max="@dimen/general_max_width" style="@style/TextViewOnBoardingPageTitle" />
    <LinearLayout android:orientation="vertical" android:id="@id/login_benefits_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/spacing_l" app:layout_constraintBottom_toTopOf="@id/btn_continue_google" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_headline_authentication">
        <com.getmimo.ui.authentication.LoginBenefitView android:id="@id/login_benefit_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xl_expandable" android:maxWidth="@dimen/content_max_width" app:benefitsAnimation="@raw/streak_icon" app:benefitsDescription="@string/login_benefits_progress_description" app:benefitsTitle="@string/login_benefits_progress_title" />
        <com.getmimo.ui.authentication.LoginBenefitView android:id="@id/login_benefit_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_l_expandable" android:maxWidth="@dimen/content_max_width" android:minWidth="@dimen/authentication_benefits_container_size" app:benefitsAnimation="@raw/trophy_icon" app:benefitsDescription="@string/login_benefits_compete_description" app:benefitsTitle="@string/login_benefits_compete_title" />
        <com.getmimo.ui.authentication.LoginBenefitView android:id="@id/login_benefit_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_l_expandable" android:maxWidth="@dimen/content_max_width" android:minWidth="@dimen/authentication_benefits_container_size" app:benefitsAnimation="@raw/heart_icon" app:benefitsDescription="@string/login_benefits_friends_description" app:benefitsTitle="@string/login_benefits_friends_title" />
    </LinearLayout>
    <com.getmimo.ui.authentication.ButtonSocialLogin android:id="@id/btn_continue_google" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginBottom="@dimen/spacing_xs_expandable" android:layout_marginStart="@dimen/spacing_xl" android:layout_marginEnd="@dimen/spacing_xl" app:button_logo="@drawable/google_logo" app:button_text="@string/sign_in_with_google_benefits" app:layout_constraintBottom_toTopOf="@id/btn_authentication_main_action" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_max="@dimen/content_max_width" style="@style/GoogleLogin" />
    <com.getmimo.ui.components.common.MimoMaterialButton android:id="@id/btn_authentication_main_action" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginBottom="@dimen/spacing_m_expandable" android:text="@string/sign_in_with_email" app:layout_constraintBottom_toTopOf="@id/layout_terms_conditions" app:layout_constraintEnd_toEndOf="@id/btn_continue_google" app:layout_constraintStart_toStartOf="@id/btn_continue_google" app:layout_constraintWidth_max="@dimen/content_max_width" style="@style/MaterialButton.Outlined" />
    <include android:gravity="center" android:id="@id/layout_terms_conditions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/spacing_l" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintBottom_toTopOf="@id/tv_delete_account" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" layout="@layout/authentication_terms_and_conditions" />
    <TextView android:textColor="@color/text_weak" android:gravity="center" android:id="@id/tv_delete_account" android:paddingTop="2.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_m_expandable" android:text="@string/login_delete_account" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/TextP3" />
</androidx.constraintlayout.widget.ConstraintLayout>