<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/onboarding_container_margin_bottom" android:fillViewport="true" android:layout_marginHorizontal="@dimen/spacing_m"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxWidth="@dimen/general_max_width">
        <TextView android:textColor="@color/text_primary" android:gravity="center_horizontal" android:id="@id/tv_set_motive_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/onboarding_title_margin_top" android:layout_marginBottom="@dimen/spacing_xxl" android:text="@string/onboarding_set_motive_title" android:layout_marginHorizontal="@dimen/spacing_m" app:layout_constraintBottom_toTopOf="@id/layout_motive" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" style="@style/TextH1" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/layout_motive" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_set_motive_title">
            <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_motive_developer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_developer" app:motive_title="@string/onboarding_set_motive_developer" />
            <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_motive_fun" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_fun" app:motive_title="@string/onboarding_set_motive_fun" />
            <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_motive_career" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_career" app:motive_title="@string/onboarding_set_motive_career" />
            <com.getmimo.ui.onboarding.motive.OnboardingMotiveButton android:id="@id/btn_motive_project" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/spacing_xs" app:motive_image="@drawable/onboarding_different_reason" app:motive_title="@string/onboarding_set_motive_project" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>