<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_hearts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xxl" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cv_bottom_sheet_header" />
    <TextView android:textColor="@color/text_primary" android:id="@id/tv_hearts_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_l" android:text="@string/full_hearts" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_hearts" style="@style/TextH1" />
    <TextView android:textColor="@color/text_weak" android:gravity="center" android:id="@id/tv_hearts_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xs" android:text="@string/hearts_keep_on_learning" android:paddingHorizontal="@dimen/spacing_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_hearts_title" style="@style/TextP1" />
    <com.getmimo.ui.components.common.MimoMaterialButton android:id="@id/btn_get_unlimited_hearts" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xl" android:text="@string/get_unlimited_hearts" android:layout_marginHorizontal="@dimen/spacing_m" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_hearts_desc" app:layout_constraintWidth_max="@dimen/general_max_width" style="@style/MaterialButton.Primary" />
    <TextView android:textColor="@color/primary_default" android:id="@id/tv_quit_lesson" android:paddingBottom="@dimen/spacing_l" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_m" android:text="@string/quit_lesson" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_get_unlimited_hearts" app:layout_constraintWidth_max="@dimen/general_max_width" style="@style/TextButton1" />
    <View android:layout_width="fill_parent" android:layout_height="@dimen/spacing_m" app:layout_constraintTop_toBottomOf="@id/btn_get_unlimited_hearts" />
</merge>