<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_chapter_survey_prompt" android:background="@color/background_primary" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_rating_screen_mascot" android:layout_width="160.0dip" android:layout_height="230.0dip" android:layout_marginTop="140.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_survey" />
    <TextView android:textColor="@color/text_primary" android:gravity="center" android:id="@id/tv_survey_prompt_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:text="@string/survey_prompt_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_rating_screen_mascot" style="@style/TextH1" />
    <TextView android:textColor="@color/text_weak" android:gravity="center" android:id="@id/tv_survey_prompt_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/survey_prompt_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_survey_prompt_title" style="@style/TextP1" />
    <com.getmimo.ui.components.common.MimoMaterialButton android:id="@id/btn_chapter_survey_open" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/chapter_end_continue_button_margin_bottom" android:text="@string/survey_prompt_open" android:layout_marginHorizontal="@dimen/spacing_m" app:layout_constraintBottom_toTopOf="@id/btn_chapter_survey_no_thanks" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_max="@dimen/general_max_width" style="@style/MaterialButton.Primary" />
    <com.getmimo.ui.components.common.MimoMaterialButton android:id="@id/btn_chapter_survey_no_thanks" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="32.0dip" android:text="@string/survey_prompt_no_thanks" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_max="@dimen/general_max_width" style="@style/MaterialButton.TextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>