<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:id="@id/toolbar_view_components" layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <HorizontalScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <RadioGroup android:orientation="vertical" android:id="@id/rg_lesson_run_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_s_expandable" app:layout_constraintEnd_toStartOf="@id/rg_run_button_states" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_components_lesson_run_speed" />
                    </RadioGroup>
                    <RadioGroup android:orientation="vertical" android:id="@id/rg_run_button_states" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_s_expandable" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/rg_lesson_run_speed" app:layout_constraintTop_toTopOf="parent">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_components_lesson_run_button_states" />
                    </RadioGroup>
                </LinearLayout>
            </HorizontalScrollView>
            <com.getmimo.ui.lesson.view.InteractionKeyboardView android:id="@id/interaction_keyboard" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/interaction_keyboard_height" android:layout_marginTop="@dimen/spacing_s_expandable" />
            <RadioGroup android:orientation="vertical" android:id="@id/rg_chapter_toolbar_types" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_s_expandable" app:layout_constraintEnd_toStartOf="@id/rg_run_button_states" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view_components_lesson_chapter_toolbar" />
            </RadioGroup>
            <com.getmimo.ui.chapter.view.ChapterToolbar android:id="@id/chapter_toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/lesson_progress_navbar_height" />
            <com.getmimo.ui.components.common.MimoMaterialButton android:id="@id/btn_interaction_keyboard_with_feedback" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/spacing_m_expandable" android:text="@string/view_components_lesson_interaction_keyboard_with_feedback" style="@style/MaterialButton.Primary" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>